--- a/login.html
+++ b/login.html
@@ -238,6 +238,13 @@
         
         <!-- admin -->
         <script src="modules/admin/config.js"></script>
+        
+        <!-- user -->
+        <script src="modules/user/config.js"></script>
+
+
+        <!-- role -->
+        <script src="modules/role/config.js"></script>
 </body>
 
 </html>
