--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="chicken">
 
 <head>
-    <title>Chicken Center</title>
+    <title>Test</title>
     <!-- HTML5 Shim and Respond.js IE10 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 10]>
@@ -17,7 +17,7 @@
       <meta name="keywords" content="bootstrap, bootstrap admin template, admin theme, admin dashboard, dashboard template, admin template, responsive" />
       <meta name="author" content="codedthemes" />
       <!-- Favicon icon -->
-      <link rel="icon" href="resources/assets/img/favicon.ico" type="image/x-icon">
+      <!-- <link rel="icon" href="resources/assets/img/favicon.ico" type="image/x-icon"> -->
     <!-- Google font-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
     <!-- waves.css -->
@@ -115,7 +115,7 @@
                           </div>
                       </div> -->
                       <a href="#">
-                          <img class="img-fluid" src="resources/assets/img/chicken.png" alt="Theme-Logo" />
+                          <!-- <img class="img-fluid" src="resources/assets/img/chicken.png" alt="Theme-Logo" /> -->
                       </a>
                       <a class="mobile-options waves-effect waves-light">
                           <i class="ti-more"></i>
@@ -443,7 +443,7 @@
 
 <footer class="footer ng-scope">
     <span class="pull-right">
-        © 2018 Chicken Center. Developed by NewBie Technologies
+        © 2018 
     </span>
 </footer>
     <!-- Warning Section Starts -->
