--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="chicken">
 
 <head>
-    <title>Chicken Center</title>
+    <title>Test</title>
     <!-- HTML5 Shim and Respond.js IE10 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 10]>
@@ -17,8 +17,7 @@
       <meta name="keywords" content="bootstrap, bootstrap admin template, admin theme, admin dashboard, dashboard template, admin template, responsive" />
       <meta name="author" content="codedthemes" />
       <!-- Favicon icon -->
-
-      <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+      <!-- <link rel="icon" href="resources/assets/img/favicon.ico" type="image/x-icon"> -->
       <!-- Google font-->     
       <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
       <!-- Required Fremwork -->
@@ -215,6 +214,7 @@
 <script type="text/javascript" src="resources/lib/fileupload/angular-file-upload.min.js"></script>
 
 <script type="text/javascript" src="resources/lib/ocLazyLoad.js"></script>
+    <script type="text/javascript" src="resources/lib/bootbox.min.js"></script>
         <script type="text/javascript" src="resources/assets/js/libs/toastr.min.js"></script>
 <!-- waves js -->
 <script src="assets/pages/waves/js/waves.min.js"></script>
